fix the delivery agent  code coverage.